# telegram-bot-template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  commands.py  config.py  docker-compose-dev-db.yml  docker-compose.yml  example.env  keyboards.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt
db/: __init__.py  functions.py  models.py
dialogs/: __init__.py
filters/: is_owner.py
handlers/owner/: statistics.py  stuff.py
handlers/user/: info.py  sample.py  start.py
middlewares/: __init__.py  throttling.py
