[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Igor Kuzmenkov <me@igorduino.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
aerich = "^0.7.2"
redis = "^5.0.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
aiogram-dialog = "^2.0.0"
coloredlogs = "^15.0.1"
cachetools = "^5.3.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[tool.aerich]
tortoise_orm = "config.tortoise_config"
location = "./migrations"
src_folder = "./."
